--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,15 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 flutter:
   uses-material-design: true
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/bgr1.png
+    - images/bgr2.png
+    - images/bgr3.png
+    - images/face.png
+    - images/face1.png
+    - images/twitter.png
+    - images/twitter1.png
+    - images/google.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
