--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ flutter:
     - images/twitter.png
     - images/twitter1.png
     - images/google.png
+    - images/music.png
+    - images/avt.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
