--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   sizer: ^2.0.15
   ionicons: ^0.1.2
   cached_network_image: ^3.2.0
-
+  awesome_dialog: ^2.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
