--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   ionicons: ^0.1.2
   cached_network_image: ^3.2.0
   awesome_dialog: ^2.1.2
+  carousel_slider: ^4.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
