--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cached_network_image: ^3.2.0
   awesome_dialog: ^2.1.2
   carousel_slider: ^4.1.1
+  expandable: ^5.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
