--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
-      sdk: flutter
+    sdk: flutter
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   sizer: ^2.0.15
@@ -21,11 +21,19 @@ dependencies:
   awesome_dialog: ^2.1.2
   carousel_slider: ^4.1.1
   expandable: ^5.0.1
+  bloc: ^8.0.3
+  equatable: ^2.0.3
+  flutter_bloc: any
+  get_it: ^7.2.0
+  built_value: ^8.1.4
+  injectable: ^1.5.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^1.0.0
+  built_value_generator: ^8.1.4
+  injectable_generator: ^1.5.3
+  build_runner: any
 flutter:
   uses-material-design: true
   assets:
