--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   get_it: ^7.2.0
   built_value: ^8.1.4
   injectable: ^1.5.3
+  shimmer: ^2.0.0
+  lazy_load_scrollview: ^1.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
