--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,17 @@ dependencies:
   injectable: ^1.5.3
   shimmer: ^2.0.0
   lazy_load_scrollview: ^1.3.0
+  dio: ^4.0.6
+  json_annotation: 4.4.0
+  json_serializable: 6.1.4
+  retrofit: ^3.0.1+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
   built_value_generator: ^8.1.4
   injectable_generator: ^1.5.3
+  retrofit_generator: ^4.0.1
   build_runner: any
 flutter:
   uses-material-design: true
