--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   json_annotation: 4.4.0
   json_serializable: 6.1.4
   retrofit: ^3.0.1+1
+  flutter_svg: ^1.0.3
+  # flutter packages pub run build_runner build --delete-conflicting-outputs
 dev_dependencies:
   flutter_test:
     sdk: flutter
