--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   json_serializable: 6.1.4
   retrofit: ^3.0.1+1
   flutter_svg: ^1.0.3
+  shared_preferences: ^2.0.15
   # flutter packages pub run build_runner build --delete-conflicting-outputs
 dev_dependencies:
   flutter_test:
