--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   retrofit: ^3.0.1+1
   flutter_svg: ^1.0.3
   shared_preferences: ^2.0.15
+  webview_flutter: ^3.0.4
   # flutter packages pub run build_runner build --delete-conflicting-outputs
 dev_dependencies:
   flutter_test:
